[package]
name = "cosmian_cover_crypt"
version = "13.1.0"
authors = [
  "Théophile Brezot <theophile.brezot@cosmian.com>",
  "Bruno Grieder <bruno.grieder@cosmian.com>",
]
documentation = "https://docs.rs/cosmian_cover_crypt/"
edition = "2021"
license-file = "LICENSE.md"
repository = "https://github.com/Cosmian/cover_crypt"
description = "Key Policy attribute encryption based on subset cover"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "cosmian_cover_crypt"
# The cdylib is only interesting if the `--features ffi` flag is set on build
# This does not seem to be actionable conditionally https://github.com/rust-lang/cargo/issues/4881

[dependencies]
cosmian_crypto_core = { version = "9.2.0", default-features = false, features = ["ser", "sha3", "aes", "curve25519"] }
pqc_kyber = { version = "0.4", features = ["std", "hazmat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0.2", features = ["shake", "kmac"] }
zeroize = "1.6.0"

[dev-dependencies]
base64 = { version = "0.21.0" }
