[package]
name = "cosmian_cover_crypt"
version = "15.0.0"
authors = [
  "Théophile Brezot <theophile.brezot@cosmian.com>",
  "Bruno Grieder <bruno.grieder@cosmian.com>",
  "Hugo Rosenkranz-Costa <hugo.rosenkranz@cosmian.com>",
  "Emmanuel COSTE <emmanuel.coste@cosmian.com>",
]
documentation = "https://docs.rs/cosmian_cover_crypt/"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/Cosmian/cover_crypt"
description = "Key Policy attribute encryption based on subset cover"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "cosmian_cover_crypt"

# The cdylib is only interesting if the `--features ffi` flag is set on build
# This does not seem to be actionable conditionally https://github.com/rust-lang/cargo/issues/4881

[[bench]]
name = "benches"
harness = false
required-features = ["test-utils"]

[[example]]
name = "encrypt"
required-features = ["test-utils"]

[[example]]
name = "decrypt"
required-features = ["test-utils"]

[[example]]
name = "runme"
required-features = ["test-utils"]

[features]
default = ["mlkem-512", "curve25519"]
mlkem-512 = []
mlkem-768 = []
p-256 = ["cosmian_rust_nist_ec_provider"]
curve25519 = ["cosmian_rust_curve25519_provider"]
test-utils = []

[dependencies]
cosmian_rust_nist_ec_provider = { git = "https://github.com/Cosmian/crypto_core.git", branch = "tbz/restructure-repo", optional = true }
cosmian_rust_curve25519_provider = { git = "https://github.com/Cosmian/crypto_core.git", branch = "tbz/restructure-repo", optional = true }
cosmian_crypto_core = { git = "https://github.com/Cosmian/crypto_core.git", branch = "tbz/restructure-repo", default-features = false, features = [
  "aes",
  "ser",
  "sha3"
] }
ml-kem = { version = "0.2", features = ["zeroize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
criterion = { version = "0.7", features = [
  "html_reports",
], default-features = false }
